# domain-cif

./: .pre-commit-config.yaml  README.md
.github/static/: get_dic2owl_deps.py
.github/workflows/: ci.yml  ci_automerge_dependabot.yml  ci_cd_updated_main.yml  ci_dependabot.yml  dic2owl_ci.yml
dic2owl/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
dic2owl/dic2owl/: __init__.py  cli.py  dic2owl.py
tests/dic2owl/: conftest.py  test_cli.py  test_dic2owl_generator.py
